src/test/ui/argument-suggestions/swapped_arguments.stderr
error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:8:12
   |
LL |   two_args(1.0, 1);
   |            ^^^ expected `i32`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:8:17
   |
LL |   two_args(1.0, 1);
   |                 ^
   |                 |
   |                 expected `f32`, found integer
   |                 help: use a float literal: `1.0`

error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:11:14
   |
LL |   three_args(1.0,   1,  "");
   |              ^^^ expected `i32`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:11:21
   |
LL |   three_args(1.0,   1,  "");
   |                     ^
   |                     |
   |                     expected `f32`, found integer
   |                     help: use a float literal: `1.0`

error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:14:20
   |
LL |   three_args(  1,  "", 1.0);
   |                    ^^ expected `f32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:14:24
   |
LL |   three_args(  1,  "", 1.0);
   |                        ^^^ expected `&str`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:17:15
   |
LL |   three_args( "", 1.0,   1);
   |               ^^ expected `i32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:17:26
   |
LL |   three_args( "", 1.0,   1);
   |                          ^ expected `&str`, found integer

error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:20:13
   |
LL |   four_args(1.0, 1, X {}, "");
   |             ^^^ expected `i32`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:20:18
   |
LL |   four_args(1.0, 1, X {}, "");
   |                  ^
   |                  |
   |                  expected `f32`, found integer
   |                  help: use a float literal: `1.0`

error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:20:21
   |
LL |   four_args(1.0, 1, X {}, "");
   |                     ^^^^ expected `&str`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/swapped_arguments.rs:20:27
   |
LL |   four_args(1.0, 1, X {}, "");
   |                           ^^ expected struct `X`, found `&str`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0308`.
